src/assets/styles/tabler-custom.css
/* TODO: Clean up ! */

/* 
  Required CSS support for:
  - :has()
  - color-mix
*/

:host, :root {
  --tblr-font-sans-serif: "Geist", "Inter Var", Inter, -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
  --tblr-font-monospace: "Geist Mono", Monaco, Consolas, Liberation Mono, Courier New, monospace;
}

body {
  font-variant-numeric: tabular-nums;
}


/* DEV: HIDES VUE INSPECTOR */
#vue-inspector-container,
#__vue-devtools-container__ {
  /* display: none !important; */
}


/* FIX: scrollbar */
:host, :root {
  margin: 0 !important;
}

/* More emphasized selection background for light theme */
::selection, .text-selected {
  background-color: color-mix(in srgb, var(--tblr-primary) 20%, transparent);
}

/* Even more emphasized selection background for light theme */
:is(:host, :root):is([data-bs-theme=dark]) ::selection {
  background-color: color-mix(in srgb, var(--tblr-primary) 50%, transparent);
}

/* Increase specificity, to make damn sure it is hidden */
[hidden][hidden][hidden][hidden] {
  display: none !important;
}

dialog {
  border: none;
}

/* # NAVBAR */
.navbar {
  --tblr-navbar-active-color: var(--tblr-primary);
  --tblr-navbar-active-bg: transparent;
}

/* Hamburger icon */
.navbar-toggler {
  color: var(--tblr-body-color);
}

.navbar-nav {
  --tblr-nav-link-color: var(--tblr-body-color);
  --tblr-nav-link-font-weight: 500;
}

/* Active link is highlighted */
.navbar-nav .nav-link.active {
  background-color: var(--tblr-nav-link-hover-bg);
}

/* Increase icon gap */
.navbar-nav .nav-link-icon {
  margin-right: 0.875rem;
}

/* Disable the left border */
.nav-item.active:after {
  display: none;
}

.navbar-vertical {
  scrollbar-width: thin;
}

.navbar.navbar-vertical .dropdown-menu {
  --tblr-dropdown-link-hover-color: var(--tblr-navbar-active-color);
  --tblr-dropdown-link-hover-bg: transparent;
}

.navbar.navbar-vertical .dropdown-item:is(:focus, :hover, .active, :active) {
  color: var(--tblr-dropdown-link-hover-color) !important;
}

/* Limits mobile navbar to full screen height and enables overflow scroll. Without this, sticky navbar would not be possible to navigate if it overflowed */
/* NOTE: The 2rem is the logo height, which is the hard-coded height of .navbar-brand-image */
@media (max-width: 991.98px) {
  .navbar.sticky-top .navbar-collapse {
    max-height: calc(100dvh - var(--tblr-navbar-padding-y) - var(--tblr-navbar-brand-padding-y) - 2rem - var(--tblr-navbar-brand-padding-y) - var(--tblr-navbar-padding-y));
    overflow: auto;
  }
}

/* Rounded bottom corners of expanded mobile navbar */
@media (max-width: 991.98px) {
  .navbar-vertical:has(.navbar-collapse.show) {
    border-bottom-left-radius: var(--tblr-border-radius-lg);
    border-bottom-right-radius: var(--tblr-border-radius-lg);
  }
}

/* Centers the center logo in the center column */
@media (max-width: 991.98px) {
  .navbar-vertical.navbar-expand-lg > [class^=container] {
    display: grid;
    grid-template-rows: auto 1fr;
    grid-template-columns: 1fr auto 1fr;
  }

  .navbar-collapse {
    grid-column: 1/-1;
  }
}

/* # NAVBAR (end) */

.dropdown-menu {
  --tblr-dropdown-padding-x: 0.25rem;
  --tblr-dropdown-padding-y: 0.25rem;
}

/* Rounded item corners */
.dropdown-item {
  --tblr-dropdown-item-border-radius: var(--tblr-border-radius);
}

/* Open dropdown arrow rotated */
.dropdown-toggle.show:after {
  rotate: 180deg;
  /* Will rotate in optical center */
  transform-origin: calc(50% - 0.05em) 75%;
}

/* The <form> will be 'invisible' (but its children will not) and won't interfere with the layout */
.card form:not(.dropzone) {
  display: contents;
}

/* Limits dropdown height */
/* .dropdown-menu {
  max-height: min(300px, 80vh);
  overflow: auto;
} */

/* Increase backdrop intensity */
.modal-backdrop.show {
  --tblr-backdrop-bg: black;
  opacity: 0.5;
}

/* ? MAYBE: DIALOG AS BOTTOM DRAWER ON MOBILE ??? */
@media (max-width: 575px) {
  .modal-dialog.drawer {
    align-items: end;
    --tblr-modal-margin: 0.0rem;
  }

  .drawer .modal-content {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
}

/* Disable font size increase on mobile */
@media (max-width: 575.98px) {
  .form-control, .form-select {
    font-size: inherit;
  }
}

/* FIX: floating label vertical alignment */
.form-floating > label {
  align-content: center;
}

.avatar {
  object-fit: cover;
}

/* FIX: Sort icon shrinking */
.table-sort:after {
  flex-shrink: 0;
}

/* FIX: Buttons being displayed as block */
.table-mobile .btn {
  display: inline-flex;
}

/* FIX: Visible border on disabled btn-action */
.btn-action {
  --tblr-btn-disabled-border-color: transparent;
}

@media (max-width: 575.98px) {
  .table-mobile-sm .btn {
    display: inline-flex;
  }
}

@media (max-width: 767.98px) {
  .table-mobile-md .btn {
    display: inline-flex;
  }
}

@media (max-width: 991.98px) {
  .table-mobile-lg .btn {
    display: inline-flex;
  }
}

@media (max-width: 1199.98px) {
  .table-mobile-xl .btn {
    display: inline-flex;
  }
}

@media (max-width: 1399.98px) {
  .table-mobile-xxl .btn {
    display: inline-flex;
  }
}


.btn-sm, .btn-group-sm > .btn {
  --tblr-btn-padding-y: 0.375rem;
  /* --tblr-btn-padding-x: 0.6rem; */
  --tblr-btn-border-radius: var(--tblr-border-radius-md);
}

.form-control-sm {
  min-height: calc(1.25rem + (0.25rem * 2) + calc(var(--tblr-border-width) * 2));
  padding: 0.25rem 0.5rem;
}


.badge {
  --tblr-badge-font-weight: var(--tblr-font-weight-normal);
}


@media (min-width: 992px) {
  :is(:host, :root):not([data-bs-theme=dark]) .card:not(:is(.card, .modal) .card) {
    --tblr-card-box-shadow: 0 8px 16px rgba(98, 125, 152, .12);
    --tblr-card-box-shadow: 0 4px 16px rgba(98, 125, 152, .10);
    --tblr-card-box-shadow: none;
  }

  /* .card that is not a child of another .card OR .card that is not a child of .modal */
  /* Cards that are not inside of another .card or a .modal */
  .card:not(:is(.card, .modal) .card) {
    /* border-width: 0px; */
  }


  .navbar {
    /* box-shadow: 0 2px 4px #627d9833, 0 1px 2px #102a4333; */
  }

  .navbar-expand-lg.navbar-vertical {
    /* box-shadow: 0 4px 8px #627d9829, 0 2px 4px #102a4329; */
  }
}

.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
  /* color: inherit; */
}


.card-title {
  /* font-weight: var(--tblr-font-weight-bold); */
}

html {
  scroll-padding-top: 4rem;
}

/* ? maybe ? */
@media (min-width: 768px) {
  .empty {
    padding: 3rem;
  }
}

/* ? maybe ? */
.empty-icon {
  width: 2.5rem;
  height: 2.5rem;
}

/* FIX Když tabulka měla jen jeden řádek tak podtržení vyčuhovalo */
.card-table :is(thead, tbody, tfoot) tr:last-child {
  border-bottom: 0;
}

.card-table :is(thead, tbody, tfoot) tr:last-child :is(th, td) {
  border-bottom: 0;
}


/* WIP */
.nav {
  --tblr-nav-link-padding-x: 1rem;
  --tblr-nav-link-padding-y: 0.75rem;
  --tblr-nav-link-hover-bg: transparent;
  --tblr-nav-link-font-weight: 600;
}

.nav-underline {
  --tblr-nav-underline-gap: 0rem;
  --tblr-nav-underline-border-width: 2px;
  align-items: end;
}

.nav .nav-link {
  padding: var(--tblr-nav-link-padding-y) var(--tblr-nav-link-padding-x);
}

.nav-underline .nav-link.active,
.nav-underline .show > .nav-link {
  border-bottom-color: var(--tblr-primary);
  font-weight: var(--tblr-nav-link-font-weight);
}

.nav-bordered .nav-item + .nav-item {
  margin: 0;
}


/* HACK: QUICK AND DIRTY */
@media (min-width: 992px) {
  .navbar-vertical.navbar-expand-lg .navbar-brand {
    /* padding: 0.75rem 0; */
    padding: 0;
  }

  .navbar-brand-image {
    height: 100px;
  }
}

:root {
  /* ! CUSTOM VARIABLE ! */
  --tblr-navbar-vertical-width: 17rem;
}

.card-actions {
  margin: -0.5rem 0 -0.5rem auto;
}

/* height 0, y-axis centered (not to be confused with .h-0) */
.h0 {
  height: 0;
  min-height: 0;
  overflow: visible;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* HACK: Tabler má hard-coded šířku vertikálního navbaru. Proto jsem ji tady přepsal pomocí jednotné proměnné. (Vypsal jsem jen třídy relevantní pro náš -lg breakpoint, zbylé se nás stejně netýkají.) */
@media (min-width: 992px) {

  .navbar-expand-lg.navbar-vertical ~ .navbar,
  .navbar-expand-lg.navbar-vertical ~ .page-wrapper {
    margin-left: var(--tblr-navbar-vertical-width);
  }

  .navbar-expand-lg.navbar-vertical.navbar-right ~ .navbar,
  .navbar-expand-lg.navbar-vertical.navbar-right ~ .page-wrapper,
  .navbar-expand-lg.navbar-vertical.navbar-end ~ .navbar,
  .navbar-expand-lg.navbar-vertical.navbar-end ~ .page-wrapper {
    margin-right: var(--tblr-navbar-vertical-width);
  }
}

@media (min-width: 992px) {
  .navbar-vertical.navbar-expand-lg {
    width: var(--tblr-navbar-vertical-width);
    /* FIX: Scrollbar will only show when content overflows, instead of always showing */
    overflow-y: auto;
  }
}

@media (min-width: 992px) {
  .navbar-vertical.navbar-expand-lg ~ .page {
    padding-left: var(--tblr-navbar-vertical-width);
  }

  .navbar-vertical.navbar-expand-lg.navbar-right ~ .page,
  .navbar-vertical.navbar-expand-lg.navbar-end ~ .page {
    padding-left: 0;
    padding-right: var(--tblr-navbar-vertical-width);
  }
}

.progress, .progress-stacked {
  --tblr-progress-bar-transition: none;
}

/* Overflow scroll shadow (horizontal-only) */
@supports (container-type: scroll-state) {

  .table-responsive {
    --scroll-shadow-color: rgba(0, 0, 0, 0.15);
    --scroll-shadow-direction: ;
    container-type: scroll-state;
  }

  .table-responsive::before,
  .table-responsive::after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    width: 15px;
    display: block;
    background: linear-gradient(to var(--scroll-shadow-direction), var(--scroll-shadow-color), transparent);
    pointer-events: none;
    z-index: 1;
    opacity: 0;
    transition: opacity 0.15s;
  }

  .table-responsive::before {
    left: 0;
    --scroll-shadow-direction: right;

    @container scroll-state(scrollable: left) {
      opacity: 1;
    }
  }

  .table-responsive::after {
    right: 0;
    --scroll-shadow-direction: left;

    @container scroll-state(scrollable: right) {
      opacity: 1;
    }
  }
}

